# crf-chain2-generic

./: crf-chain2-generic.cabal  crf-grid2-constrained.cabal
Data/CRF/Chain2/: DP.hs  Generic.hs  Pair.hs  Util.hs
Data/CRF/Chain2/Generic/: Base.hs  Codec.hs  DP.hs  External.hs  FeatMap.hs  Inference.hs  Internal.hs  Model.hs  Train.hs  Util.hs
Data/CRF/Chain2/Generic/FeatMap/: Map.hs
Data/CRF/Chain2/Pair/: Base.hs  Codec.hs  FeatMap.hs  Train.hs
