name:               crf-grid2-constrained
version:            0.1.1
synopsis:           Second-order, layered, constrained, linear conditional random fields
description:
    The library provides implementation of the second-order, layered, linear
    conditional random fields (CRFs) with position-wise constraints imposed
    over label values.
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2011 Jakub Waszczuk, 2012 IPI PAN
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Math
homepage:           https://github.com/kawu/crf-grid2-constrained
build-type:         Simple

library
    build-depends:
        base >= 4 && < 5

    exposed-modules:
        Data.CRF.Grid2.Constrained

    other-modules:
        Data.CRF.Grid2.Constrained.DP
      , Data.CRF.Grid2.Constrained.Util
        
    ghc-options: -Wall -O2

source-repository head
    type: git
    location: git://github.com/kawu/crf-grid2-constrained.git
